--- a/Index.HTML
+++ b/Index.HTML
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<head>
+<html>
+    <head>
 
-</head>
-<body>
-    <h2>Hello world</h2>
-    <p>oliwis</p>
-</body>
+    </head>
+    <body>
+        <h2>Hello world</h2>
+        <p>oliwis</p>
+    </body>
+    
+
+
+</html>
