--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <h2>Hello world</h2>
         <p>oliwis</p>
+        <img sRC="Portfolio - 1_compressed.pdf" alt="Portfolio-Image">
     </body>
     
 </html>
